test/bad/icnormal-in.c
/* Invalid character in a 'normal' position */
int x;
